--- a/.github/workflows/bpi-r4-BE14-janusz.yaml
+++ b/.github/workflows/bpi-r4-BE14-janusz.yaml
@@ -85,6 +85,7 @@ jobs:
           echo "CONFIG_PACKAGE_wireguard-tools=y" >> .config
           echo "CONFIG_PACKAGE_luci-proto-wireguard=y" >> .config
           echo "CONFIG_PACKAGE_qrencode=y" >> .config
+          echo "CONFIG_PACKAGE_luci-mod-dashboard=y" >> .config
 
       - name: Run defconfig
         run: |
