--- a/.github/workflows/bpi-r4-BE14-janusz.yaml
+++ b/.github/workflows/bpi-r4-BE14-janusz.yaml
@@ -72,6 +72,7 @@ jobs:
           echo "CONFIG_PACKAGE_fail2ban=y" >> .config
           echo "CONFIG_PACKAGE_modemmanager=y" >> .config
           echo "CONFIG_PACKAGE_kmod-mhi-net=y" >> .config
+          echo "CONFIG_PACKAGE_kmod-tun=y" >> .config
           echo "CONFIG_PACKAGE_kmod-mhi-wwan-ctrl=y" >> .config
           echo "CONFIG_PACKAGE_kmod-usb-net-qmi-wwan=y" >> .config
           echo "CONFIG_PACKAGE_kmod-usb-acm=y" >> .config
@@ -88,6 +89,7 @@ jobs:
           echo "CONFIG_PACKAGE_kmod-wireguard=y" >> .config
           echo "CONFIG_PACKAGE_wireguard-tools=y" >> .config
           echo "CONFIG_PACKAGE_luci-proto-wireguard=y" >> .config
+          echo "CONFIG_PACKAGE_tailscale=y" >> .config
           echo "CONFIG_PACKAGE_qrencode=y" >> .config
 
       - name: Run defconfig
