--- a/.github/workflows/bpi-r4-BE14-janusz.yaml
+++ b/.github/workflows/bpi-r4-BE14-janusz.yaml
@@ -1,41 +1,33 @@
----
-# hostapd: https://github.com/openwrt/openwrt/pull/16338 - probably
-# that change is raising issue with 6GHz network. Disabling...
-# Janusz fix: https://github.com/openwrt/openwrt/pull/16342
 name: BPI-R4 + BE14 + Luci + EHT fix by Janusz
-
-on:
-  workflow_dispatch:
-
+'on':
+  workflow_dispatch: null
 env:
   REMOTE_REPOSITORY: danpawlik/openwrt
   REMOTE_BRANCH: be14-and-hostapd-janusz-v4
   RELEASE_PREFIX: Mediatek_mt7988a_bpi-r4_be14_luci_eht
   DEVICE_CONFIG: configs/mediatek/mt7988a/bpi-r4
   ROLE_CONFIG: configs/common/main-router
-
 jobs:
   check_commits:
     name: Check Commits
     runs-on: ubuntu-24.04
     outputs:
-      latest_commit_sha: ${{ steps.get_sha.outputs.latest_commit_sha }}
+      latest_commit_sha: '${{ steps.get_sha.outputs.latest_commit_sha }}'
     steps:
       - name: Checkout remote repository
         uses: actions/checkout@v4
         with:
-          repository: ${{ env.REMOTE_REPOSITORY }}
-          ref: ${{ env.REMOTE_BRANCH }}
-
+          repository: '${{ env.REMOTE_REPOSITORY }}'
+          ref: '${{ env.REMOTE_BRANCH }}'
       - name: Get the latest commit SHA
         id: get_sha
         run: |
           echo "latest_commit_sha=$(git rev-parse HEAD)" >> $GITHUB_ENV
           echo "latest_commit_sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
-
   build:
     name: Build BPI-R4 with BE14 + luci + eht by Janusz
-    needs: [check_commits]
+    needs:
+      - check_commits
     runs-on: ubuntu-24.04
     steps:
       - name: Install dependencies
@@ -47,25 +39,28 @@ jobs:
             python3-setuptools rsync swig unzip zlib1g-dev file wget curl zstd \
             git
           sudo apt full-upgrade -y
-
       - name: Checkout remote repository
         uses: actions/checkout@v4
         with:
-          repository: ${{ env.REMOTE_REPOSITORY }}
-          ref: ${{ env.REMOTE_BRANCH }}
-
+          repository: '${{ env.REMOTE_REPOSITORY }}'
+          ref: '${{ env.REMOTE_BRANCH }}'
       - name: Update and install feeds
         run: |
           ./scripts/feeds update -a
           ./scripts/feeds install -a
-
       - name: Configure firmware image
-        run: |
-          curl -SL https://raw.githubusercontent.com/danpawlik/openwrt-builder/master/configs/mediatek/mt7988a/bpi-r4 > .config
-          curl -SL https://raw.githubusercontent.com/danpawlik/openwrt-builder/master/configs/common/luci >> .config
-          curl -SL https://raw.githubusercontent.com/danpawlik/openwrt-builder/master/configs/common/snapshot-short >> .config
+        run: >
+          curl -SL
+          https://raw.githubusercontent.com/danpawlik/openwrt-builder/master/configs/mediatek/mt7988a/bpi-r4
+          > .config
 
-      # add packages from other users. Temporary
+          curl -SL
+          https://raw.githubusercontent.com/danpawlik/openwrt-builder/master/configs/common/luci
+          >> .config
+
+          curl -SL
+          https://raw.githubusercontent.com/danpawlik/openwrt-builder/master/configs/common/snapshot-short
+          >> .config
       - name: Add packages
         run: |
           echo "CONFIG_PACKAGE_tailscale=y" >> .config
@@ -89,43 +84,36 @@ jobs:
           echo "CONFIG_PACKAGE_wireguard-tools=y" >> .config
           echo "CONFIG_PACKAGE_luci-proto-wireguard=y" >> .config
           echo "CONFIG_PACKAGE_qrencode=y" >> .config
-	  echo "CONFIG_PACKAGE_kmod-tun=y" >> .config
-   echo "CONFIG_PACKAGE_tailscale=y" >> .config
-   echo "CONFIG_PACKAGE_luci-mod-dashboard=y" >> .config
-
       - name: Run defconfig
         run: |
           make defconfig
-
       - name: Remove packages that are marked as modules just to save time
-        run: |
-          grep "=m" .config | grep -v 'CONFIG_PACKAGE_libustream-mbedtls=m' | while read -r line; do module=$(echo "$line" | cut -f1 -d'='); sed -i "s/^$line$/# $module is not set/" .config; done
-
+        run: >
+          grep "=m" .config | grep -v 'CONFIG_PACKAGE_libustream-mbedtls=m' |
+          while read -r line; do module=$(echo "$line" | cut -f1 -d'='); sed -i
+          "s/^$line$/# $module is not set/" .config; done
       - name: Run once again defconfig
         run: make -j $(nproc) defconfig
-
       - name: Download dependencies
         run: make -j $(nproc) download
-
       - name: Build the firmware image
         run: make -j $(nproc) world
-
       - name: Compress all packages
-        run: |
-          tar caf bin/targets/mediatek/filogic/packages.tar.gz bin/targets/mediatek/filogic/packages
-
+        run: >
+          tar caf bin/targets/mediatek/filogic/packages.tar.gz
+          bin/targets/mediatek/filogic/packages
       - name: Package output
         run: tar -cvf bpi_r4-images.tar bin/targets/mediatek/filogic
-
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: bpi_r4-images
           path: bpi_r4-images.tar
-
   release:
     name: Create release
-    needs: [build, check_commits]
+    needs:
+      - build
+      - check_commits
     if: needs.build.result == 'success'
     runs-on: ubuntu-24.04
     steps:
@@ -133,27 +121,29 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: bpi_r4-images
-
       - name: Extract artifacts
         run: tar xf bpi_r4-images.tar
-
       - name: Get current date
         run: echo "RELEASE_DATE=$(date +%F)" >> $GITHUB_ENV
-
       - name: Create release
         uses: softprops/action-gh-release@master
         with:
           files: bin/targets/mediatek/filogic/*
-          tag_name: ${{ env.RELEASE_PREFIX }}-${{ env.REMOTE_BRANCH }}-${{ env.RELEASE_DATE }}
-          name: OpenWRT BPI-R4 + BE14 + luci + + EHT - ${{ env.REMOTE_BRANCH }} - ${{ env.RELEASE_DATE }}
-          body: |
-            Updated prebuilt images for ${{ env.RELEASE_DATE }} with BE14 and EHT support
-            Build Commit: ${{ needs.check_commits.outputs.latest_commit_sha }}
+          tag_name: >-
+            ${{ env.RELEASE_PREFIX }}-${{ env.REMOTE_BRANCH }}-${{
+            env.RELEASE_DATE }}
+          name: >-
+            OpenWRT BPI-R4 + BE14 + luci + + EHT - ${{ env.REMOTE_BRANCH }} -
+            ${{ env.RELEASE_DATE }}
+          body: >
+            Updated prebuilt images for ${{ env.RELEASE_DATE }} with BE14 and
+            EHT support
 
+            Build Commit: ${{ needs.check_commits.outputs.latest_commit_sha }}
       - name: Clean up old releases
         uses: dev-drprasad/delete-older-releases@master
         with:
           keep_latest: 5
           delete_tags: false
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
