--- a/.github/workflows/bpi-r4-BE14-janusz.yaml
+++ b/.github/workflows/bpi-r4-BE14-janusz.yaml
@@ -70,6 +70,12 @@ jobs:
         run: |
           echo "CONFIG_PACKAGE_tailscale=y" >> .config
           echo "CONFIG_PACKAGE_fail2ban=y" >> .config
+          echo "CONFIG_PACKAGE_adguardhome=y" >> .config
+          echo "CONFIG_PACKAGE_banip=y" >> .config
+          echo "CONFIG_PACKAGE_luci-app-ddns=y" >> .config
+          echo "CONFIG_PACKAGE_luci-mod-dashboard=y" >> .config
+          echo "CONFIG_PACKAGE_usteer=y" >> .config
+          echo "CONFIG_PACKAGE_luci-mod-status=y" >> .config
           echo "CONFIG_PACKAGE_modemmanager=y" >> .config
           echo "CONFIG_PACKAGE_kmod-mhi-net=y" >> .config
           echo "CONFIG_PACKAGE_kmod-mhi-wwan-ctrl=y" >> .config
