nvme_Update bpi-r4-BE14-janusz.yaml

--- a/.github/workflows/bpi-r4-BE14-janusz.yaml
+++ b/.github/workflows/bpi-r4-BE14-janusz.yaml
@@ -96,6 +96,9 @@ jobs:
           echo "CONFIG_PACKAGE_wireguard-tools=y" >> .config
           echo "CONFIG_PACKAGE_luci-proto-wireguard=y" >> .config
           echo "CONFIG_PACKAGE_qrencode=y" >> .config
+          echo "CONFIG_PACKAGE_nvme-cli=y" >> .config
+          echo "CONFIG_PACKAGE_kmod-nvme=y" >> .config
+          echo "CONFIG_PACKAGE_libnvme=y" >> .config
 
       - name: Run defconfig
         run: |
